# claude-code-viewer

./: .gitignore  README.md  build_package.py  install_package.py  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  dependabot.yml  release.yml
claude_viewer/: analytics.py  config.py  config_manager.py  main.py  models.py  parser.py  server.py  storage.py  watcher.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Analytics.tsx  ChatInterface.tsx  CodeSurvivalFileTree.tsx  Dashboard.tsx  FileChangeModal.tsx  MessageItem.tsx  OneShotDetailsModal.tsx  OneShotDiffViewer.tsx  ProjectDetails.tsx  Search.tsx  SessionAnalyticsModal.tsx  SessionStatsModal.tsx  Settings.tsx  Sidebar.tsx  TagManager.tsx  Tooltip.tsx
frontend/src/locales/: en.json  ja.json  zh.json
frontend/src/utils/: formatDate.ts  formatDateTime.ts  formatDuration.ts  formatMessage.ts
